# ai-search

./: .gitignore  Cargo.toml  README.md
.github/workflows/: docs.yml
examples/simple_puzzle/: main.rs  problem.rs
examples/tile_puzzle/: main.rs  problem.rs
src/: cost.rs  decision.rs  lib.rs  prelude.rs  state.rs  traits.rs
src/games/: alphabeta.rs  minimax.rs  mod.rs
src/search/: astar.rs  bfs.rs  decision.rs  dfs.rs  dls.rs  greedy.rs  idfs.rs  ids.rs  mod.rs  uniform.rs
src/search/methods/: bfs.rs  dfs.rs  dls.rs  mod.rs  uniform.rs
src/state/: depth.rs  graph.rs  history.rs  logging.rs  mod.rs  path.rs  pathcost.rs
src/value/: cost.rs  heuristic.rs  mod.rs
src/wrappers/: depth.rs  graph.rs  helpers.rs  history.rs  logging.rs  mod.rs  pathcost.rs
