[package]
name = "ai-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5.1"
derivative = "2.2.0"
paste = "1.0.14"
priority-queue = "1.3.2"

[dev-dependencies]
itertools = "0.11.0"
rand = "0.8.5"
